@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-05-13 Takashi
+ BUG: [ 1717814 ] Fix header drawing issue on WinXP with Luna Theme
+  Src/Common/SortHeaderCtrl.cpp
+
 2007-05-12 Tim
  PATCH: [ 1716799 ] Remove TOOLBAR from lang files
   Src: Merge.rc Merge2.rc
